@@ -30,11 +30,7 @@ task :setup do
   puts "   using host: #{config['host']} and port: #{config['port']}"
   Rake::Task["prepare"].invoke(config['host'], config['port'])
 
-  puts "3. Writes to crontab"
-  %x[whenever -w]
-  puts %x[whenever -k]
-
-  puts "4. Sets up log rotation"
+  puts "3. Sets up log rotation"
   Rake::Task["logrotate"].execute
   puts "Done."
 end
