@@ -1,3 +1,4 @@
+	Don't use whenever gem to create cronjob
 	Show library card number instead of user's real name in logged in window
 	Client IP-address not required
 0.0.2
